assets/css/navbar.css
.navbar-fixed-top.scrolled {
  background-color: #11ffee00;
}

.navbar-custom {
  background-color: #c6cfff;
  transition: background-color 270ms linear;
}

/* change the brand and text color */
.navbar-custom .navbar-brand,
.navbar-custom .navbar-text {
  color: #e8d3ff;
  font-size: 1.8em;
  font-family: 'Lobster', cursive;
}

/* change the link color */
.navbar-custom .navbar-nav .nav-link {
  color: #1a2a3a; 
}

/* change the color of active or hovered links */
.navbar-custom .nav-item.active .nav-link {
  font-weight: 600;
}
.navbar-custom .nav-item:hover .nav-link {
  color: #7a8a9a;
}

.navbar-toggler.custom-toggler {
  border-color: rgba(255,102,203, 0.1);
}

.custom-toggler .navbar-toggler-icon {
  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,102,203, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
} 

